--- a/index.html
+++ b/index.html
@@ -3,29 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>ASCII Grid Menu</title>
-  <style>
-    body {
-      background-color: #111;   /* Dark background */
-      color: #0f0;              /* Green text, like a terminal */
-      font-family: monospace;   /* Monospaced for ASCII art */
-      white-space: pre;         /* Preserve all spaces and line breaks */
-      padding: 2rem;
-    }
-
-    a {
-      color: #0f0;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    a:hover {
-      color: #ff0;
-    }
-  </style>
+  <link rel="stylesheet" href="web.css">
 </head>
 <body>
 <pre>
-        | academic.
+        | Afjal.
         |
         |
         |
