--- a/index.html
+++ b/index.html
@@ -6,29 +6,28 @@
   <link rel="stylesheet" href="web.css">
 </head>
 <body>
-<pre>
-        | Afjal.
-        |
-        |
-        |
-        |
-        |
-        |
-        |
-        |
-        |    (x)  <a href="#">[puzzles >]</a>
-        |
-        |     |
-        |                (x) <a href="#">[projects >]</a>
-        |     |           |
-        |  (x)  <a href="#">[food >]</a>  |
-        |     |           |
-       ╱ ¯¯¯|¯ ¯¯¯¯¯¯¯¯¯--|--------------_________________
-    ╱         |           |                               ¯¯¯¯¯¯¯¯¯¯¯¯¯¯----------------_________________
- ╱          |             |
-╱             ¯ |           |
-╱                  ¯           |
+  <div class="ascii">
+        | academic.<br>
+        |<br>
+        |<br>
+        |<br>
+        |<br>
+        |<br>
+        |<br>
+        |<br>
+        |    (x)  <a href="#">[puzzles &gt;]</a><br>
+        |<br>
+        |     |<br>
+        |                (x) <a href="#">[projects &gt;]</a><br>
+        |     |           |<br>
+        |  (x)  <a href="#">[food &gt;]</a>  |<br>
+        |     |           |<br>
+       ╱ ¯¯¯|¯ ¯¯¯¯¯¯¯¯¯--|--------------_________________<br>
+    ╱         |           |                               ¯¯¯¯¯¯¯¯¯¯¯¯¯¯----------------_________________<br>
+ ╱          |             |<br>
+╱             ¯ |           |<br>
+╱                  ¯           |<br>
                                   ¯
-</pre>
+  </div>
 </body>
 </html>
