added dark mode

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="web.css">
 </head>
 <body>
+  <div class="theme-toggle">
+    <button id="themeBtn" onclick="toggleTheme()">
+      [theme]
+    </button>
+  </div>
   <div class="ascii">
        | academic.<br>
        |<br>
@@ -29,5 +34,18 @@
   ╱                  ¯           |<br>
                                   ¯
   </div>
+  <script>
+    // Initialize theme from localStorage or default to dark
+    const currentTheme = localStorage.getItem('theme') || 'dark';
+    document.documentElement.setAttribute('data-theme', currentTheme);
+    
+    function toggleTheme() {
+      const html = document.documentElement;
+      const currentTheme = html.getAttribute('data-theme');
+      const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+      html.setAttribute('data-theme', newTheme);
+      localStorage.setItem('theme', newTheme);
+    }
+  </script>
 </body>
 </html>
