changed structure again

--- a/index.html
+++ b/index.html
@@ -12,28 +12,30 @@
     </button>
   </div>
   <div class="ascii">
-       | academic.<br>
-       |<br>
-       |<br>
-       |<br>
-       |<br>
-       |<br>
-       |<br>
-       |<br>
-       |    (x)  <a href="#">[puzzles &gt;]</a><br>
-       |<br>
-       |     |<br>
-       |                (x) <a href="#">[projects &gt;]</a><br>
-       |     |           |<br>
-       |  (x)  <a href="#">[food &gt;]</a>  |<br>
-       |     |           |<br>
-      ╱ ¯¯¯|¯ ¯¯¯¯¯¯¯¯¯--|--------------_________________<br>
-     ╱         |           |                               ¯¯¯¯¯¯¯¯¯¯¯¯¯¯----------------_________________<br>
+        | Afjal.<br>
+        |<br>
+        |<br>
+        |<br>
+        |<br>
+        |<br>
+        |<br>
+        |<br>
+        |    (x)  <a href="#">[puzzles &gt;]</a><br>
+        |<br>
+        |     |<br>
+        |                (x) <a href="#">[projects &gt;]</a><br>
+        |     |           |<br>
+        |  (x)  <a href="#">[food &gt;]</a>  |<br>
+        |     |           |<br>
+        ╱ ¯¯¯|¯ ¯¯¯¯¯¯¯¯¯--|--------------_________________<br>
+      ╱         |           |                               ¯¯¯¯¯¯¯¯¯¯¯¯¯¯----------------_________________<br>
     ╱          |             |<br>
-   ╱             ¯ |           |<br>
-  ╱                  ¯           |<br>
+  ╱             ¯ |           |<br>
+╱                  ¯           |<br>
                                   ¯
   </div>
+
+
   <script>
     // Initialize theme from localStorage or default to dark
     const currentTheme = localStorage.getItem('theme') || 'dark';
