--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ASCII Grid Menu</title>
+  <title>Afjal's Homepage</title>
   <link rel="stylesheet" href="web.css">
 </head>
 <body>
@@ -12,27 +12,27 @@
     </button>
   </div>
   <div class="ascii">
-        | Afjal.<br>
+        | Afjal Chowdhury.<br>
+        | afjal.nc {@} gmail {dot} com<br>
         |<br>
         |<br>
         |<br>
         |<br>
         |<br>
         |<br>
+        |    (o)  <a href="https://github.com/afjal4/neural-representations-drp">[directed reading program &gt;]</a><br>
         |<br>
-        |    (x)  <a href="#">[puzzles &gt;]</a><br>
-        |<br>
-        |     |<br>
-        |                (x) <a href="#">[projects &gt;]</a><br>
+        |     |                                           (o) <a href="#">[puzzles &gt;]</a><br>
+        |                (o) <a href="#">[projects &gt;]</a><br>
         |     |           |<br>
-        |  (x)  <a href="#">[food &gt;]</a>  |<br>
-        |     |           |<br>
-        ╱ ¯¯¯|¯ ¯¯¯¯¯¯¯¯¯--|--------------_________________<br>
-      ╱         |           |                               ¯¯¯¯¯¯¯¯¯¯¯¯¯¯----------------_________________<br>
-    ╱          |             |<br>
-  ╱             ¯ |           |<br>
-╱                  ¯           |<br>
-                                  ¯
+        |  (o)  <a href="#">[WIP &gt;]</a><br>
+        |     |           |<br> 
+        ╱ ¯¯|¯¯¯¯¯¯¯¯¯¯¯¯¯----------------_________________<br>
+      ╱       |           |                               ¯¯¯¯¯¯¯¯¯¯¯¯¯¯----------------_________________<br>
+    ╱       |                                                        <br>
+  ╱         ¯ |           |<br>
+╱             ¯           <br>
+                          ¯
   </div>
 
 
