--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     </button>
   </div>
   <div class="ascii">
+        ^
         | Afjal Chowdhury.<br>
         | afjal.nc {@} gmail {dot} com<br>
         |<br>
-        |<br>
+        | Welcome to my website!<br>
         |<br>
         |<br>
         |<br>
