--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         | Afjal Chowdhury.<br>
         | afjal.nc {@} gmail {dot} com<br>
         |<br>
-        | Welcome to my website!<br>
-        |<br>
+        | Welcome to my website! My name is Afjal and I am studying Computational Maths at Imperial.<br>
+        | I'll be posting lots of fun creative & academic projects this year; watch this space!!<br>
         |<br>
         |<br>
         |<br>
@@ -25,15 +25,15 @@
         |<br>
         |     |                                           (o) <a href="#">[puzzles &gt;]</a><br>
         |                (o) <a href="#">[projects &gt;]</a><br>
-        |     |           |<br>
+        |     |           |                                |<br>
         |  (o)  <a href="#">[WIP &gt;]</a><br>
-        |     |           |<br> 
+        |     |           |                                |<br> 
         ╱ ¯¯|¯¯¯¯¯¯¯¯¯¯¯¯¯----------------_________________<br>
-      ╱       |           |                               ¯¯¯¯¯¯¯¯¯¯¯¯¯¯----------------_________________<br>
+      ╱       |           |                                |¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯----------------_________________<br>
     ╱       |                                                        <br>
-  ╱         ¯ |           |<br>
-╱             ¯           <br>
-                          ¯
+  ╱         ¯ |           |                                |<br>
+╱             ¯           ¯                                ¯<br>
+                          
   </div>
 
 
