--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
         |<br>
         |<br>
         |    (o)  <a href="https://github.com/afjal4/neural-representations-drp">[directed reading program &gt;]</a><br>
-        |<br>
+        |                                                                     (o) <a href="https://medium.com/@afjal.nc">[medium &gt;]</a><br><br> 
         |     |                                           (o) <a href="#" onclick="togglePuzzles(event);">[puzzles &gt;]</a><br>
-        |                (o) <a href="#">[projects &gt;]</a><br>
+        |                (o) <a href="#">[WIP &gt;]</a>                                   |<br>
         |     |           |                                |<br>
-        |  (o)  <a href="#">[WIP &gt;]</a><br>
+        |                                                          (o)  <a href="#">[WIP &gt;]</a> |<br>
         |     |           |                                |<br> 
-        ╱ ¯¯|¯¯¯¯¯¯¯¯¯¯¯¯¯----------------_________________<br>
+        ╱ ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯----------------_________________         |          |<br>
       ╱       |           |                                |¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯----------------_________________><br>
-    ╱       |                                                        <br>
-  ╱         ¯ |           |                                |<br>
-L             ¯           ¯                                ¯<br>
-                          
+    ╱                     ¯                                         |          |<br>
+  ╱           |                                            |        ¯<br>
+L             ¯                                            ¯                   |<br>
+                                                                               ¯<br>
   </div>
 
   <div id="puzzles-content" class="puzzles-section" style="display: none;">
